fix: proper title size on mobile media

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -96,6 +96,7 @@
       color: $grey;
       @media (max-width: $min-width-desktop) {
         padding: 0;
+        font-size: 3rem;
       }
     }
   }
